# Desktop-Object-Recognition

./: .gitignore  README.md  db.xlsx  main.py  pyproject.toml
core/: ConditionsHandler.py  ImageFilters.py  MediaHandler.py  RecognitionPainter.py  VideoWorker.py
data/: colors.py  labels.py
filters/: binarization.py  brightness.py  contrast.py  solarization.py
ui/: UI.py  app.ui
utils/: image_convertion.py  recognized_objects.py  resize_image.py  setup_condition_options.py  setup_objects_database.py  setup_report_table.py
