[tool.poetry]
name = "Object Recognition"
version = "0.1.0"
description = ""
authors = ["Cryne "]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyqt6 = "6.4.2"
pyqt6-tools = "^6.4.2.3.3"
opencv-python = "^4.7.0.72"
pillow = "^9.5.0"
ultralytics = "^8.0.109"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
